--- a/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
+++ b/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -460,18 +460,21 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "\n",
+    "crowdfunding_info_clean = crowdfunding_info_df.join(crowdfunding_info_df['category & sub-category'].str.split('/', n=1, expand=True).rename(columns={0:'category', 1:'subcategory'}))\n",
+    "crowdfunding_info_clean.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +494,8 @@
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
     "\n",
+    "categories = crowdfunding_info_clean['category'].unique()\n",
+    "subcategories = crowdfunding_info_clean['subcategory'].unique()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -498,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -518,16 +523,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5 6 7 8 9]\n",
-      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -535,48 +542,58 @@
     "category_ids = np.arange(1, 10)\n",
     "subcategory_ids = np.arange(1, 25)\n",
     "\n",
-    "print(category_ids)\n",
-    "print(subcategory_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['cat1', 'cat2', 'cat3', 'cat4', 'cat5', 'cat6', 'cat7', 'cat8', 'cat9']\n",
-      "['subcat1', 'subcat2', 'subcat3', 'subcat4', 'subcat5', 'subcat6', 'subcat7', 'subcat8', 'subcat9', 'subcat10', 'subcat11', 'subcat12', 'subcat13', 'subcat14', 'subcat15', 'subcat16', 'subcat17', 'subcat18', 'subcat19', 'subcat20', 'subcat21', 'subcat22', 'subcat23', 'subcat24']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
-    "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
-    "    \n",
-    "print(cat_ids)\n",
-    "print(scat_ids)"
+    "category_ids\n",
+    "#print(subcategory_ids)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cat1' 'cat2' 'cat3' 'cat4' 'cat5' 'cat6' 'cat7' 'cat8' 'cat9']\n",
+      "['subcat1' 'subcat2' 'subcat3' 'subcat4' 'subcat5' 'subcat6' 'subcat7'\n",
+      " 'subcat8' 'subcat9' 'subcat10' 'subcat11' 'subcat12' 'subcat13'\n",
+      " 'subcat14' 'subcat15' 'subcat16' 'subcat17' 'subcat18' 'subcat19'\n",
+      " 'subcat20' 'subcat21' 'subcat22' 'subcat23' 'subcat24']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "# Use a list comprehension to add \"cat\" to each category_id. \n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "cat_ids = np.array([f'cat{i+1}' for i in range(len(categories))])\n",
+    "\n",
+    "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
+    "\n",
+    "scat_ids = np.array([f'subcat{i+1}' for i in range(len(subcategory_ids))])\n",
+    "\n",
+    "\n",
+    "print(cat_ids)\n",
+    "print(scat_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "\n",
+    "category_df = pd.DataFrame({'category_id': cat_ids, 'category': categories})\n",
+    "\n",
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({'subcategory_id': scat_ids, 'subcategory': subcategories})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +684,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +876,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,9 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
