--- a/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
+++ b/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -965,8 +965,6 @@
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
-       "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -987,8 +985,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
-       "      <td>food</td>\n",
-       "      <td>food trucks</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1007,8 +1003,6 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/rock</td>\n",
-       "      <td>music</td>\n",
-       "      <td>rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1027,8 +1021,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>technology/web</td>\n",
-       "      <td>technology</td>\n",
-       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1047,8 +1039,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>music/rock</td>\n",
-       "      <td>music</td>\n",
-       "      <td>rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1067,8 +1057,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
-       "      <td>theater</td>\n",
-       "      <td>plays</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1096,15 +1084,15 @@
        "3             24      US      USD   1634792400  1642399200       False   \n",
        "4             53      US      USD   1608530400  1629694800       False   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
-       "0      False        food/food trucks        food  food trucks  \n",
-       "1       True              music/rock       music         rock  \n",
-       "2      False          technology/web  technology          web  \n",
-       "3      False              music/rock       music         rock  \n",
-       "4      False           theater/plays     theater        plays  "
+       "   spotlight category & sub-category  \n",
+       "0      False        food/food trucks  \n",
+       "1       True              music/rock  \n",
+       "2      False          technology/web  \n",
+       "3      False              music/rock  \n",
+       "4      False           theater/plays  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1144,20 +1132,18 @@
        "      <th>cf_id</th>\n",
        "      <th>contact_id</th>\n",
        "      <th>company_name</th>\n",
-       "      <th>description</th>\n",
+       "      <th>blurb</th>\n",
        "      <th>goal</th>\n",
        "      <th>pledged</th>\n",
        "      <th>outcome</th>\n",
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
-       "      <th>end_date</th>\n",
+       "      <th>launched_at</th>\n",
+       "      <th>deadline</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
-       "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1178,8 +1164,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
-       "      <td>food</td>\n",
-       "      <td>food trucks</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1198,8 +1182,6 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/rock</td>\n",
-       "      <td>music</td>\n",
-       "      <td>rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1218,8 +1200,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>technology/web</td>\n",
-       "      <td>technology</td>\n",
-       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1238,8 +1218,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>music/rock</td>\n",
-       "      <td>music</td>\n",
-       "      <td>rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1258,8 +1236,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
-       "      <td>theater</td>\n",
-       "      <td>plays</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1273,35 +1249,42 @@
        "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
        "4   1365        2199                Larson-Little   \n",
        "\n",
-       "                                     description    goal  pledged     outcome  \\\n",
+       "                                           blurb    goal  pledged     outcome  \\\n",
        "0           Pre-emptive tertiary standardization     100        0      failed   \n",
        "1               Managed bottom-line architecture    1400    14560  successful   \n",
        "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
        "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
        "4                      Proactive foreground core    7600     5265      failed   \n",
        "\n",
-       "   backers_count country currency  launched_date    end_date  staff_pick  \\\n",
-       "0              0      CA      CAD     1581573600  1614578400       False   \n",
-       "1            158      US      USD     1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD     1608184800  1640844000       False   \n",
-       "3             24      US      USD     1634792400  1642399200       False   \n",
-       "4             53      US      USD     1608530400  1629694800       False   \n",
+       "   backers_count country currency  launched_at    deadline  staff_pick  \\\n",
+       "0              0      CA      CAD   1581573600  1614578400       False   \n",
+       "1            158      US      USD   1611554400  1621918800       False   \n",
+       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
+       "3             24      US      USD   1634792400  1642399200       False   \n",
+       "4             53      US      USD   1608530400  1629694800       False   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
-       "0      False        food/food trucks        food  food trucks  \n",
-       "1       True              music/rock       music         rock  \n",
-       "2      False          technology/web  technology          web  \n",
-       "3      False              music/rock       music         rock  \n",
-       "4      False           theater/plays     theater        plays  "
+       "   spotlight category & sub-category  \n",
+       "0      False        food/food trucks  \n",
+       "1       True              music/rock  \n",
+       "2      False          technology/web  \n",
+       "3      False              music/rock  \n",
+       "4      False           theater/plays  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df.rename(columns={\n",
+    "    \"blurb\":\"description\", \n",
+    "    \"launched at\" : \"launched_date\", \n",
+    "    \"deadlined\":\"end_date\"\n",
+    "    })\n",
+    "\n",
+    "campaign_df.head()"
    ]
   },
   {
