--- a/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
+++ b/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
@@ -3698,7 +3698,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mel was here"
+   ]
   }
  ],
  "metadata": {
