--- a/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
+++ b/Submission/ETL_Mini_Project_NGomez_MMorales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
        "999      False        food/food trucks     food  food trucks  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
        "999        food trucks        cat1        subcat1  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2100,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -2260,7 +2260,7 @@
        "4        cat4        subcat4  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -2362,7 +2362,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2463,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,24 +2472,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 237,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'contacts_df_clean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[96], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Export the DataFrame as a CSV file. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcontacts_df_clean\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResources/contacts.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf8\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'contacts_df_clean' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "#contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   },
   {
@@ -2501,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -2562,7 +2550,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2574,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -2648,21 +2636,21 @@
        "4       2199  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Extract the four-digit contact ID number.\n",
-    "p='([0-9]{4})'\n",
+    "p = '([0-9]{4})'\n",
     "contact_info_df_copy['contact_id'] = contact_info_df_copy['contact_info'].str.extract(p)\n",
     "contact_info_df_copy.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -2688,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -2835,7 +2823,7 @@
        "9        5468    Danielle Ladeck  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2849,7 +2837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -2980,7 +2968,7 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2994,7 +2982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -3102,7 +3090,7 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3115,7 +3103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -3234,7 +3222,7 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3251,7 +3239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -3370,7 +3358,7 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3383,7 +3371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -3411,7 +3399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3420,10 +3408,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "mel was here\n",
     "Nes was too"
